migrate to primary domain

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,14 +1,14 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name dev.larsendt.com;
+    server_name www.larsendt.com dev.larsendt.com larsendt.com;
     rewrite ^ https://$server_name$request_uri? permanent;
 }
 
 server {
     listen       443;
     listen       [::]:443 ssl;
-	server_name dev.larsendt.com;
+	server_name www.larsendt.com dev.larsendt.com larsendt.com;
 
 	access_log  /home/dev/dev/larsendt/logs/access.log;
     error_log   /home/dev/dev/larsendt/logs/error.log;
