--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -28,6 +28,8 @@ ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
+    add_header X-Clacks-Overhead "GNU Terry Pratchett";
+
     gzip on;
 
     location / {
